fix play on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -433,4 +433,8 @@ input[type='color']::-moz-color-swatch {
     height: 100%;
     z-index: 5;
   }
+
+  .plyr__control.plyr__control--overlaid{
+    z-index: 15;
+  }
 }
